--- a/_config.yml
+++ b/_config.yml
@@ -42,8 +42,10 @@ format:
     integer: '"Integer":/docs/1.0/glossary/#integer'
     long: '"Long":/docs/1.0/glossary/#long'
     boolean: '"Boolean":/docs/1.0/glossary/#boolean'
+    date: '"Date":/docs/1.0/glossary/#date'
     address: '"Address":/docs/1.0/api/address/#format'
     account_contact: '"Account Contact":docs/1.0/api/account_contact/#format'
+    order_line: '"Order Line":/docs/1.0/api/order_line/#format'
   mandatory: Mandatory
   non_editable: X
   non_available: '-'
