Add order lines as a primary resource type.
Also minor updates here and there.

--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,8 @@ resource:
     url: /projects
   sales_orders:
     url: /sales_orders
+  order_lines:
+    url: /order_lines
 
 format:
   header:
