Add currencies to the documentation. Also complete Item Family (full API now).
Also fix a copy/pasta (accounts instead of items).

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ resource:
     url: /payment_terms
   item_families:
     url: /item_families
+  currencies:
+    url: /currencies
 
 format:
   header:
