--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ format:
     boolean: '"Boolean":/docs/1.0/glossary/#boolean'
     date: '"Date":/docs/1.0/glossary/#date'
     address: '"Address":/docs/1.0/api/address/#format'
-    customer_contact: '"Customer Contact":/docs/1.0/api/customer_contact/#format'
+    contact: '"Contact":/docs/1.0/api/contact/#format'
     order_line: '"Order Line":/docs/1.0/api/order_line/#format'
     entry: '"Entry":/docs/1.0/api/entry/#format'
   mandatory: Mandatory
