--- a/_config.yml
+++ b/_config.yml
@@ -45,23 +45,23 @@ format:
     default: Default
     non_editable: Non editable
   type:
-    string: '"String":/docs/1.0/glossary/#string'
-    string4: '"String ^4^":/docs/1.0/glossary/#string4'
-    string10: '"String ^10^":/docs/1.0/glossary/#string10'
-    string64: '"String ^64^":/docs/1.0/glossary/#string64'
-    string128: '"String ^128^":/docs/1.0/glossary/#string128'
-    string255: '"String ^255^":/docs/1.0/glossary/#string255'
-    text: '"Text":/docs/1.0/glossary/#text'
-    integer: '"Integer":/docs/1.0/glossary/#integer'
-    long: '"Long":/docs/1.0/glossary/#long'
-    double: '"Double":/docs/1.0/glossary/#double'
-    boolean: '"Boolean":/docs/1.0/glossary/#boolean'
-    date: '"Date":/docs/1.0/glossary/#date'
-    address: '"Address":/docs/1.0/api/address/#format'
-    contact: '"Contact":/docs/1.0/api/contact/#format'
-    order_line: '"Order Line":/docs/1.0/api/order_line/#format'
-    entry: '"Entry":/docs/1.0/api/entry/#format'
+    string: '<a href="/docs/1.0/overview/#string" alt=""/>String</a>'
+    string4: '<a href="/docs/1.0/overview/#string4" alt=""/>String<sup>4</sup></a>'
+    string10: '<a href="/docs/1.0/overview/#string10" alt=""/>String<sup>10</sup></a>'
+    string64: '<a href="/docs/1.0/overview/#string64" alt=""/>String<sup>64</sup></a>'
+    string128: '<a href="/docs/1.0/overview/#string128" alt=""/>String<sup>128</sup></a>'
+    string255: '<a href="/docs/1.0/overview/#string255" alt=""/>String<sup>255</sup></a>'
+    text: '<a href="/docs/1.0/overview/#text" alt=""/>Text</a>'
+    integer: '<a href="/docs/1.0/overview/#integer" alt=""/>Integer</a>'
+    long: '<a href="/docs/1.0/overview/#long" alt=""/>Long</a>'
+    double: '<a href="/docs/1.0/overview/#double" alt=""/>Double</a>'
+    boolean: '<a href="/docs/1.0/overview/#boolean" alt=""/>Boolean</a>'
+    date: '<a href="/docs/1.0/overview/#date" alt=""/>Date</a>'
+    address: '<a href="/docs/1.0/api/address/#format" alt=""/>Address</a>'
+    contact: '<a href="/docs/1.0/api/contact/#format" alt=""/>Contact</a>'
+    order_line: '<a href="/docs/1.0/api/order_line/#format" alt=""/>Order Line</a>'
+    entry: '<a href="/docs/1.0/api/entry/#format" alt=""/>Entry</a>'
   mandatory: Mandatory
-  non_editable: X
+  non_editable: Yes
   non_available: '-'
   read_only: Read only
