add the description of the nested elements

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ format:
     double: '<a href="/docs/1.0/overview/#double" alt=""/>double</a>'
     boolean: '<a href="/docs/1.0/overview/#boolean" alt=""/>boolean</a>'
     date: '<a href="/docs/1.0/overview/#date" alt=""/>date</a>'
-    address: '<a href="/docs/1.0/api/address/#format" alt=""/>Address</a>'
-    contact: '<a href="/docs/1.0/api/contact/#format" alt=""/>Contact</a>'
+    address: '<a href="/docs/1.0/api/#address" alt=""/>Address</a>'
+    contact: '<a href="/docs/1.0/api/#contact" alt=""/>Contact</a>'
     order_line: '<a href="/docs/1.0/api/order_line/#format" alt=""/>Order Line</a>'
-    entry: '<a href="/docs/1.0/api/entry/#format" alt=""/>Entry</a>'
+    entry: '<a href="/docs/1.0/api/#entry" alt=""/>Entry</a>'
