--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,6 @@ format:
     boolean: boolean
     date: date
     address: '<a href="/docs/1.0/api/#address" alt=""/>Address</a>'
-    contact: array['<a href="/docs/1.0/api/#contact" alt=""/>Contact</a>']
+    contact: 'array[<a href="/docs/1.0/api/#contact" alt=""/>Contact</a>]'
     order_line: '<a href="/docs/1.0/api/order_line/#format" alt=""/>Order Line</a>'
     entry: '<a href="/docs/1.0/api/#entry" alt=""/>Entry</a>'
