--- a/_config.yml
+++ b/_config.yml
@@ -46,5 +46,5 @@ format:
     date: date
     address: '<a href="/docs/1.0/api/#address" alt=""/>Address</a>'
     contact: 'array[<a href="/docs/1.0/api/#contact" alt=""/>Contact</a>]'
-    order_line: '<a href="/docs/1.0/api/order_line/#format" alt=""/>Order Line</a>'
+    order_line: 'array[<a href="/docs/1.0/api/#orderline" alt=""/>Order Line</a>]'
     entry: 'array[<a href="/docs/1.0/api/#entry" alt=""/>Entry</a>]'
