Add invoices to the Documentation.

--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,8 @@ resource:
     url: /projects
   sales_orders:
     url: /sales_orders
+  invoices:
+    url: /invoices
   items:
     url: /items
   payment_terms:
