Add bank accounts to the documentation.

--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,8 @@ resource:
     url: /taxes
   bank_entries:
     url: /bank_entries
+  bank_accounts:
+    url: /bank_accounts
 
 format:
   date: yyyy-MM-dd (e.g. 2013-06-26)
