Transactions: update the fields description.

--- a/_config.yml
+++ b/_config.yml
@@ -66,3 +66,4 @@ format:
     order_line: 'array[<a href="/docs/1.0/api/#orderline" alt=""/>Order Line</a>]'
     entry: 'array[<a href="/docs/1.0/api/#entry" alt=""/>Entry</a>]'
     journal: '<a href="/docs/1.0/api/#journal" alt=""/>Journal</a>'
+    account: '<a href="/docs/1.0/api/#account" alt=""/>Account</a>'
