--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,8 @@ resource:
     url: /opportunity_tasks
   project_tasks:
     url: /project_tasks
+  cash_flow_details:
+    url: /dashboards/accounting/cash_flow/details
 
 format:
   date: yyyy-MM-dd (e.g. 2013-06-26)
