doc: add the documentation for the endpoint of Domain

--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,8 @@ resource:
     url: /project_tasks
   cash_flow_details:
     url: /dashboards/accounting/cash_flow/details
+  domains:
+    url: /domains
 
 format:
   date: yyyy-MM-dd (e.g. 2013-06-26)
