--- a/_config.yml
+++ b/_config.yml
@@ -17,16 +17,16 @@ web:
   domain: www.oneup.com
   endpoints:
     authorization:
-      url: /auth/
+      url: /auth
 
 oauth2:
   protocol: https
   domain: oauth-staging.oneup.com
   endpoints:
     authorization:
-      url: /oauth2/auth/
+      url: /oauth2/auth
     token:
-      url: /oauth2/token/
+      url: /oauth2/token
 
 resource:
   customers:
